fix: update header font on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -668,8 +668,12 @@ textarea.form-control {
   }
   
   .header-content p {
-    font-size: 0.8rem;
+    font-size: 1.1rem;
     max-width: 100%;
+  }
+
+  .header {
+    padding: 0 1.5rem;
   }
 
   .cta-button {
